fix bug which made npm test not work on windows adjust spacing between username and display name on profile adjust rate limits for commenting

--- a/static/style.css
+++ b/static/style.css
@@ -150,7 +150,7 @@ p.pagination {
 .userInfo .username {
     margin-left: 3px;
     font-size: 1rem;
-    margin-top: -10px;
+    margin-top: -5px;
     margin-bottom: 0px;
     opacity: 0.7;
 }
